# eth-blockchain-etl

./: .gitignore  pyproject.toml
.github/workflows/: ci.yaml
etl/blocks/: pipeline.py
etl/contracts/: pipeline.py
etl/transactions/: pipeline.py
etl/utils/: cleaning.py  logger.py  spark.py
tests/: conftest.py  test_blocks_pipeline.py  test_contracts_pipeline.py  test_transactions_pipeline.py
